--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>al3raQe Repo</title>
+	<title>Cameron's Repo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 		body {
