--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </a><center/>
 	<h1>Cameron's Private Repo</h1>
 <h2 role="header"></h2>
-		<div ><img src="https://camerons2005.github.io/photo/al3raQee.png" alt="" style="width:150px"; > </div>
+		<div ><img src="https://camerons2005.github.io/photo/cydia_icon.png" alt="" style="width:150px"; > </div>
 		<ul>
 
 <p>Maintained For Rootless iOS 15.1!</p>
