--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div ><img src="https://camerons2005.github.io/photo/cydia_icon.png" alt="" style="width:150px"; > </div>
 		<ul>
 
-<p>Maintained For Rootless iOS 15.1!</p>
+<p>Maintained For iOS 15.1 Rootless!</p>
 </body>
 <p dir="ltr" style="text-align: center;"><br /></p>
 <div class="camerons-center" dir="ltr" style="text-align: center;">
